Fix for scrollbar style for MultiSelect with fixed height (#772)

--- a/src/MultiSelect/InputWithTags.scss
+++ b/src/MultiSelect/InputWithTags.scss
@@ -20,9 +20,12 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  overflow: none;
   color: $D30;
   font-size: 16px;
+  overflow-y: hidden;
+}
+
+.hasMaxHeight {
   overflow-y: scroll;
 }
 
